--- a/Task-3/index.html
+++ b/Task-3/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="wrapper">
-        <h1>Task-3</h1>
-     <div> Price : <input type="number" id="box1" oninput="calc()" /> </div> X <div> Qty :
-      <input type="number" id="box2" oninput="calc()" /></div>
+      <h1>Task-3</h1>
+      <div>Price : <input type="number" id="box1" oninput="calc()" /></div>
+      X
+      <div>Qty : <input type="number" id="box2" oninput="calc()" /></div>
 
-    
-    <p id="outputbox" class="output"></p>
+      <p id="outputbox" class="output"></p>
     </div>
   </body>
 </html>
