Changing Naming of Function

--- a/Task-6/index.html
+++ b/Task-6/index.html
@@ -27,7 +27,7 @@
             min="0"
             max="255"
             value="0"
-            oninput="getColors()"
+            oninput="getInputSlider()"
           />
         </div>
         <div>
@@ -45,7 +45,7 @@
             min="0"
             max="255"
             value="0"
-            oninput="getColors()"
+            oninput="getInputSlider()"
           />
         </div>
         <div>
@@ -63,7 +63,7 @@
             min="0"
             max="255"
             value="0"
-            oninput="getColors()"
+            oninput="getInputSlider()"
           />
         </div>
         <div class="generated-color">
